Fixed Header and Dropdown Alignment

--- a/website/frontend/src/css/NavItems.css
+++ b/website/frontend/src/css/NavItems.css
@@ -50,6 +50,7 @@
     border: 0;
     border-style: none;
     outline: none;
+    font-size: 15px;
 }
 
 .btn:hover {
