--- a/website/frontend/src/css/dropdown.css
+++ b/website/frontend/src/css/dropdown.css
@@ -1,10 +1,9 @@
 .dropdown {
     position: absolute;
-    right: 0;
-    top: 70px;
+    right: -60px;
+    top: 75px;
     background-color: black;
-    border: 1px solid black;
-    border-radius: 8px;
+    border-radius:0 0 8px 8px;
     padding: .5rem;
     text-align: center;
 }
