--- a/website/frontend/src/css/footer2.css
+++ b/website/frontend/src/css/footer2.css
@@ -12,7 +12,7 @@
   margin: 0 auto;
 }
 .links-div {
-  margin: 50px;
+  margin: 30px;
 }
 .linkk {
   color: white;
